--- a/test/internal/fetchTestAdd.html
+++ b/test/internal/fetchTestAdd.html
@@ -80,7 +80,7 @@
         // Function to fetch data from your backend API using a POST request
         async function fetchData() {
             try {
-                const response = await fetch('http://100.84.18.148:6060/fetchTestAdd', {
+                const response = await fetch('http://localhost:6060/fetchTestAdd', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json', // Specify the content type as needed
