--- a/test/internal/createAdd.html
+++ b/test/internal/createAdd.html
@@ -152,7 +152,7 @@
             };
 
             // Make a POST request to your backend
-            fetch('http://localhost:6060/createAd', {
+            fetch('http://15.206.1.214:6060/createAd', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
